// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render 1`] = `
<div>
  <div
    class="Table__TableWrapper-ck3yk8-0 hxHQkY w-full max-w-screen-xl -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border border-theme-secondary-300"
          role="row"
        >
          <th
            class="group border text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 m-0 p-3 pl-5 pr-5 font-semibold hasBorder w-1"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top flex-row-reverse"
            >
              <div
                data-testid="table__th--0"
              >
                Header 1
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group border text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 m-0 p-3 pl-5 pr-5 font-semibold"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top no-border"
            >
              <div
                data-testid="table__th--1"
              >
                Header 2
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group border text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 m-0 p-3 pl-5 pr-5 font-semibold hasBorder"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end flex-row-reverse"
            >
              <div
                data-testid="table__th--2"
              >
                Header 3
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
              >
                <div
                  class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render empty rows if template not provided 1`] = `
<div>
  <div
    class="Table__TableWrapper-ck3yk8-0 hxHQkY w-full max-w-screen-xl -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border border-theme-secondary-300"
          role="row"
        >
          <th
            class="group border text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 m-0 p-3 pl-5 pr-5 font-semibold hasBorder w-1"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top flex-row-reverse"
            >
              <div
                data-testid="table__th--0"
              >
                Header 1
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group border text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 m-0 p-3 pl-5 pr-5 font-semibold"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top no-border"
            >
              <div
                data-testid="table__th--1"
              >
                Header 2
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group border text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 m-0 p-3 pl-5 pr-5 font-semibold hasBorder"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end flex-row-reverse"
            >
              <div
                data-testid="table__th--2"
              >
                Header 3
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
              >
                <div
                  class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
